--- a/client/src/Pages/dashboards/Analytics/Analytics.less
+++ b/client/src/Pages/dashboards/Analytics/Analytics.less
@@ -630,6 +630,8 @@
    }
    .threeChartsWrapper{
       width: 100% !important;
+      height: 180px !important;
+      margin-top: 10px !important;
       .s{
          width: 23% !important ;
       }
@@ -640,14 +642,19 @@
          margin-right: 0px;
       }
    
-   .Analytics{
-      .totalRevenChartBlock{
-         height: 600px !important;
-      }
+
+
+   
+
    }
+   .totalRevenChartBlock{
+      height: 580px !important;
+   }
+
+.Analytics{
    .statisticWrapper{
       width:calc(96vw - 100px) !important;
-      height: 2140px !important;
+      height: 2100px !important;
       .totalOrder{
         padding-right: 14px;
       }
@@ -665,4 +672,6 @@
          width: 100% !important;
       }
    }
-}}
+}
+
+}
