--- a/client/src/Pages/dashboards/CRM/CRM.less
+++ b/client/src/Pages/dashboards/CRM/CRM.less
@@ -876,61 +876,64 @@
     }
 }
 @media screen and (max-width: 1200px){
-   .xl{
-      width: 100% !important;
-   }
-   .s{
-      width: 49% !important;
-   }
-   .chartWrapper{
-      height: 390px !important;
-   }
-   .threeChartsWrapper{
-      width: 100% !important;
-      .s{
-         width: 23% !important ;
-      }
-      .m{
-         width: 48% !important;
-         height: 180px !important;
-         margin-top: 0px !important;
-         margin-right: 0px;
-      }
-   }
-   .customerRatings{
-    width: 49% !important;
-   }
-   .Overview{
-    width: 48% !important;
-   }
-   .TopPart{
-      height: 600px !important;
-   }
-   .statisticWrapper{
-      width:calc(96vw - 100px) !important;
-      height: 2400px !important;
-      .totalOrder{
-        padding-right: 14px;
-      }
-      .statisticL{
-         width: 100% !important;
-
-      }
-      .statisticM{
-         width: 48% !important;
-      }
-      .OrderStatistics{
-         width: 49% !important;
-      }
-      .statisticL-1200{
-         width: 100% !important;
-      }
-      .EarningReport, .salesbyCountries{
-        width: 49% !important;
-      }
-      .salesAnalytics, .SalesStates{
-        width: 48% !important;
-      }
-
-   }
+    .CRM{
+        .xl{
+            width: 100% !important;
+         }
+         .s{
+            width: 49% !important;
+         }
+         .chartWrapper{
+            height: 390px !important;
+         }
+         .threeChartsWrapper{
+            width: 100% !important;
+            .s{
+               width: 23% !important ;
+            }
+            .m{
+               width: 48% !important;
+               height: 180px !important;
+               margin-top: 0px !important;
+               margin-right: 0px;
+            }
+         }
+         .customerRatings{
+          width: 49% !important;
+         }
+         .Overview{
+          width: 48% !important;
+         }
+         .TopPart{
+            height: 600px !important;
+         }
+         .statisticWrapper{
+            width:calc(96vw - 100px) !important;
+            height: 2400px !important;
+            .totalOrder{
+              padding-right: 14px;
+            }
+            .statisticL{
+               width: 100% !important;
+      
+            }
+            .statisticM{
+               width: 48% !important;
+            }
+            .OrderStatistics{
+               width: 49% !important;
+            }
+            .statisticL-1200{
+               width: 100% !important;
+            }
+            .EarningReport, .salesbyCountries{
+              width: 49% !important;
+            }
+            .salesAnalytics, .SalesStates{
+              width: 48% !important;
+            }
+      
+         }
+    }
+ 
 }
