--- a/client/src/Pages/dashboards/ECommerce/ECommerce.css
+++ b/client/src/Pages/dashboards/ECommerce/ECommerce.css
@@ -47,7 +47,7 @@
   height: 364px ;
 }
 .ECommerce .littleCongradualation {
-  width: 100%;
+  width: 32%;
   box-sizing: border-box;
   height: 160px;
   margin-left: 0px;
@@ -107,7 +107,6 @@
   color: #71dd37;
 }
 .ECommerce .newVisitors .picWrapper {
-  border-right: 0.5px solid rgba(100, 100, 100, 0.2);
   position: relative;
   top: -40px;
   align-items: center;
@@ -906,7 +905,7 @@
     width: 100% !important;
   }
   .ECommerce .s {
-    width: 49% !important;
+    width: 49% ;
   }
   .ECommerce .chartWrapper {
     height: 390px !important;
@@ -923,8 +922,8 @@
     margin-top: 0px !important;
     margin-right: 0px;
   }
-  .ECommerce .threeChartsWrapper .Analytics .totalRevenChartBlock {
-    height: 600px !important;
+  .ECommerce .threeChartsWrapper .littleCongradualation {
+    width: 100% !important;
   }
   .ECommerce .threeChartsWrapper .statisticWrapper {
     width: calc(96vw - 100px) !important;
@@ -944,5 +943,50 @@
   }
   .ECommerce .threeChartsWrapper .statisticWrapper .statisticL-1200 {
     width: 100% !important;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .ECommerce .littleCongradualation {
+    width: 100% !important;
+  }
+  .ECommerce .expense {
+    margin-left: 0px;
+  }
+  .ECommerce .transactionSales {
+    margin-left: 10px !important;
+    margin-bottom: 20px !important;
+  }
+  .ECommerce .EComTotalRevenue {
+    height: 600px !important;
+  }
+  .ECommerce .EcStaThreeWrapper {
+    height: 210px !important;
+  }
+  .ECommerce .statisticWrapper {
+    height: 1600px !important;
+  }
+  .ECommerce .statisticWrapper .Performance {
+    width: 49% !important;
+  }
+  .ECommerce .statisticWrapper .EcStaThreeWrapper {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  .ECommerce .statisticWrapper .eExpense {
+    height: 200px !important;
+  }
+  .ECommerce .statisticWrapper .eExpense .lineChart {
+    width: 55% !important;
+    position: relative;
+    top: -30px;
+  }
+  .ECommerce .statisticWrapper .eExpense .textWrapper {
+    height: 180px !important;
+  }
+  .ECommerce .statisticWrapper .eExpense h5 {
+    height: 26px !important;
+  }
+  .ECommerce .statisticWrapper .EcProducts {
+    margin-bottom: 20px;
   }
 }
