--- a/client/src/Pages/dashboards/ECommerce/ECommerce.less
+++ b/client/src/Pages/dashboards/ECommerce/ECommerce.less
@@ -52,7 +52,7 @@
       height: 364px ;
    }
    .littleCongradualation{
-         width: 100%;
+         width: 32%;
          box-sizing: border-box;
          height: 160px;
          margin-left: 0px;
@@ -118,7 +118,7 @@
          }
       }
       .picWrapper{
-         border-right: 0.5px solid rgba(100,100,100,0.2);
+
          position: relative;
          top: -40px;
          align-items: center;
@@ -960,7 +960,7 @@
          width: 100% !important;
       }
       .s{
-         width: 49% !important;
+         width: 49% ;
       }
       .chartWrapper{
          height: 390px !important;
@@ -976,11 +976,9 @@
             margin-top: 0px !important;
             margin-right: 0px;
          }
-      
-      .Analytics{
-         .totalRevenChartBlock{
-            height: 600px !important;
-         }
+
+      .littleCongradualation{
+         width: 100% !important;
       }
       .statisticWrapper{
          width:calc(96vw - 100px) !important;
@@ -1002,6 +1000,57 @@
             width: 100% !important;
          }
       }
+
     }
 }
+}
+@media screen and (max-width: 1200px){
+
+
+   .ECommerce{
+      .littleCongradualation{
+         width: 100% !important;
+      }
+      .expense{
+         margin-left: 0px;;
+      }
+      .transactionSales{
+         margin-left: 10px !important;
+         margin-bottom: 20px !important;
+      }
+      .EComTotalRevenue{
+         height: 600px !important;
+      }
+      .EcStaThreeWrapper{
+         height: 210px !important;
+      }
+      .statisticWrapper{
+         height: 1600px !important;
+         .Performance{
+            width: 49% !important;
+         }
+         .EcStaThreeWrapper{
+            margin-top: 20px;
+            margin-bottom: 20px;
+         }
+         .eExpense{
+            height: 200px !important;
+            .lineChart{
+               width: 55% !important;
+               position: relative;
+               top: -30px;
+            }
+            .textWrapper{
+               height: 180px !important;
+            }
+            h5{
+               height: 26px !important;
+            }
+         }
+         .EcProducts{
+            margin-bottom: 20px;
+         }
+      }
+   }
+   
 }
