complete fetch data in analytics page

--- a/client/src/Components/MiniDrawer/MiniDrawer.less
+++ b/client/src/Components/MiniDrawer/MiniDrawer.less
@@ -10,8 +10,9 @@
     width: 34px;
     height: 34px;
     // padding-left: 40px;
-    margin-left: 10px;
+    margin-left: 20px;
     margin-bottom: 10px;
+    margin-right: 10px;
 }
 .mainContentWrapper{
     margin-top:20px;
