--- a/client/src/Components/MiniDrawer/MiniDrawer.css
+++ b/client/src/Components/MiniDrawer/MiniDrawer.css
@@ -6,8 +6,9 @@
 .mainLogo {
   width: 34px;
   height: 34px;
-  margin-left: 10px;
+  margin-left: 20px;
   margin-bottom: 10px;
+  margin-right: 10px;
 }
 .mainContentWrapper {
   margin-top: 20px;
